[tool.poetry]
name = "address-api"
version = "0.1.0"
description = ""
authors = ["cezarate <carlocezarate@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
pydantic = "^2.7.3"
pydantic-settings = "^2.3.1"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
